; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/extr_libretro.c_retro_serialize_size.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/extr_libretro.c_retro_serialize_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.savestate_state = type { i64, i32 }

@state_skip = common dso_local global i32 0, align 4
@state_fseek = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @retro_serialize_size() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.savestate_state, align 8
  %3 = alloca i32, align 4
  %4 = bitcast %struct.savestate_state* %2 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %4, i8 0, i64 16, i1 false)
  %5 = load i32, i32* @state_skip, align 4
  %6 = load i32, i32* @state_fseek, align 4
  %7 = call i32 @PicoStateFP(%struct.savestate_state* %2, i32 1, i32* null, i32 %5, i32* null, i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %0
  store i64 0, i64* %1, align 8
  br label %14

11:                                               ; preds = %0
  %12 = getelementptr inbounds %struct.savestate_state, %struct.savestate_state* %2, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %1, align 8
  br label %14

14:                                               ; preds = %11, %10
  %15 = load i64, i64* %1, align 8
  ret i64 %15
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @PicoStateFP(%struct.savestate_state*, i32, i32*, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
